--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-yauc = {git = "https://github.com/aspiringLich/yauc"}
-
+anyhow = "1.0.66"
+pretty_assertions = "1.3.0"
 bevy = "0.9.0"
 bevy-inspector-egui = "0.14.0"
 bevy_pancam = {version = "0.7.0", features = ["bevy-inspector-egui", "bevy_egui"] }
