--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ pretty_assertions = "1.3.0"
 bevy = "0.9.0"
 bevy-inspector-egui = "0.14.0"
 bevy_pancam = {version = "0.7.0", features = ["bevy-inspector-egui", "bevy_egui"] }
+bevy_egui = "0.17.1"
+bevy_rapier2d = "0.19.0"
 
 once_cell = "1.16.0"
 strum = "0.24"
