--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ bevy_egui = "0.17.1"
 # bevy_rapier2d = { version = "0.19.0", features = [ "parallel", "enhanced-determinism" ] }
 bevy_rapier2d = { version = "0.19.0", features = [ "parallel", "enhanced-determinism", "debug-render" ] }
 
+bevycheck = "0.4.0"
+
 once_cell = "1.16.0"
 strum = "0.24"
 strum_macros = "0.24"
