--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,7 @@ strum_macros = "0.24"
 
 [workspace]
 resolver = "2"
+
+# Enable max optimizations for dependencies, but not for our code:
+[profile.dev.package."*"]
+opt-level = 3
