--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,10 @@ edition = "2021"
 anyhow = "1.0.66"
 pretty_assertions = "1.3.0"
 
-bevy = { version = "0.9.0" }
+bevy = { version = "0.9.0", features = ["wayland", "dynamic"] }
 bevy-inspector-egui = "0.14.0"
 bevy_pancam = {version = "0.7.0", features = ["bevy-inspector-egui", "bevy_egui"] }
 bevy_egui = "0.17.1"
-# bevy_rapier2d = { version = "0.19.0", features = [ "parallel", "enhanced-determinism" ] }
 bevy_rapier2d = { version = "0.19.0", features = [ "parallel", "enhanced-determinism", "debug-render" ] }
 
 once_cell = "1.16.0"
