--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.66"
-pretty_assertions = "1.3.0"
-
 bevy = { version = "0.9.0", features = ["wayland", "dynamic"] }
 bevy-inspector-egui = "0.14.0"
 bevy_pancam = {version = "0.7.0", features = ["bevy-inspector-egui", "bevy_egui"] }
 bevy_egui = "0.17.1"
 bevy_rapier2d = { version = "0.19.0", features = [ "parallel", "enhanced-determinism", "debug-render" ] }
 
+anyhow = "1.0.66"
+auto_unwrap = "1.1.0"
 once_cell = "1.16.0"
+pretty_assertions = "1.3.0"
 rand = "0.8.5"
 strum = "0.24"
 strum_macros = "0.24"
