--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,12 @@ bevy-trait-query = "0.1.1"
 bevy_pancam = {version = "0.7.0", features = ["bevy-inspector-egui", "bevy_egui"] }
 bevy_egui = "0.17.1"
 bevy_rapier2d = { version = "0.19.0", features = [ "parallel", "enhanced-determinism", "debug-render" ] }
+iyes_loopless = "0.9.1"
+
 
 anyhow = "1.0.66"
 auto_unwrap = "1.1.0"
 derive_more = "0.99.17"
-once_cell = "1.16.0"
-pretty_assertions = "1.3.0"
 rand = "0.8.5"
 strum = "0.24"
 strum_macros = "0.24"
