--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ iyes_loopless = "0.9.1"
 anyhow = "1.0.66"
 auto_unwrap = "1.1.0"
 derive_more = "0.99.17"
+once_cell = "1.16.0"
 rand = "0.8.5"
 strum = "0.24"
 strum_macros = "0.24"
