--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.9.1", features = ["wayland"] }
-bevy-inspector-egui = "0.14.0"
+bevy-inspector-egui = "0.15.0"
 bevy_editor_pls = "0.2.0"
 bevy-trait-query = "0.1.1"
 bevy_pancam = {version = "0.7.0", features = ["bevy-inspector-egui", "bevy_egui"] }
-bevy_egui = "0.17.1"
+bevy_prototype_lyon = "0.7.2"
+bevy_egui = "0.18.0"
 bevy_rapier2d = { version = "0.19.0", features = [ "parallel", "enhanced-determinism", "debug-render" ] }
 iyes_loopless = "0.9.1"
 
