--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ iyes_loopless = "0.9.1"
 
 anyhow = "1.0.66"
 auto_unwrap = "1.1.0"
+ctor = "0.1.26"
 derive_more = "0.99.17"
 once_cell = "1.16.0"
 rand = "0.8.5"
