--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,13 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.9.1", features = ["wayland"] }
-bevy-inspector-egui = "0.16.6"
+bevy-inspector-egui = "0.17.0"
 bevy_editor_pls = "0.2.0"
 bevy-trait-query = "0.1.1"
 bevy_pancam = {version = "0.7.0", features = ["bevy-inspector-egui", "bevy_egui"] }
 bevy_prototype_lyon = "0.7.2"
-bevy_egui = "0.18.0"
-bevy_rapier2d = { version = "0.19.0", features = [ "parallel", "debug-render", "simd-nightly" ] }
+bevy_egui = "0.19.0"
+bevy_rapier2d = { version = "0.20.0", features = [ "parallel", "simd-nightly" ] }
 iyes_loopless = "0.9.1"
 
 
@@ -25,6 +25,7 @@ once_cell = "1.16.0"
 rand = "0.8.5"
 strum = "0.24"
 strum_macros = "0.24"
+itertools = "0.10.5"
 
 [workspace]
 resolver = "2"
