--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ bevy_prototype_lyon = "0.7.2"
 bevy_egui = "0.19.0"
 bevy_rapier2d = { version = "0.20.0", features = [ "parallel", "simd-nightly" ] }
 iyes_loopless = "0.9.1"
-
+bevy_prototype_debug_lines = "0.9"
 
 anyhow = "1.0.66"
 auto_unwrap = "1.1.0"
