--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ bevy-trait-query = "0.1.1"
 bevy_pancam = {version = "0.7.0", features = ["bevy-inspector-egui", "bevy_egui"] }
 bevy_prototype_lyon = "0.7.2"
 bevy_egui = "0.19.0"
-bevy_rapier2d = { version = "0.20.0", features = [ "parallel", "simd-nightly" ] }
+bevy_rapier2d = { version = "0.20.0", features = [ ] }
 iyes_loopless = "0.9.1"
 bevy_prototype_debug_lines = "0.9"
 
