--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ once_cell = "1.16.0"
 rand = "0.8.5"
 strum = "0.24"
 strum_macros = "0.24"
-itertools = "0.10.5"
+trait_enum = "0.5.0"
 
 [workspace]
 resolver = "2"
