--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ rand = "0.8.5"
 strum = "0.24"
 strum_macros = "0.24"
 trait_enum = "0.5.0"
+bevy_mod_debugdump = "0.6.0"
 
 [workspace]
 resolver = "2"
