--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ bevy_pancam = {version = "0.7.0", features = ["bevy-inspector-egui", "bevy_egui"
 bevy_prototype_lyon = "0.7.2"
 bevy_egui = "0.19.0"
 bevy_rapier2d = { version = "0.20.0", features = [ ] }
+bevy_mod_debugdump = "0.6.0"
 iyes_loopless = "0.9.1"
 bevy_prototype_debug_lines = "0.9"
 
@@ -25,7 +26,7 @@ rand = "0.8.5"
 strum = "0.24"
 strum_macros = "0.24"
 trait_enum = "0.5.0"
-bevy_mod_debugdump = "0.6.0"
+# quote = "1.0.23"
 
 [workspace]
 resolver = "2"
