--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ anyhow = "1.0.66"
 # auto_unwrap = "1.1.0"
 ctor = "0.1.26"
 derive_more = "0.99.17"
+dyn-clone = "1.0.10"
 # once_cell = "1.16.0"
 rand = "0.8.5"
 ron = "0.8.0"
