--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ ctor = "0.1.26"
 derive_more = "0.99.17"
 dyn-clone = "1.0.10"
 # once_cell = "1.16.0"
+mlua = { version = "0.8", features = ["lua54", "vendored"] }
 rand = "0.8.5"
 ron = "0.8.0"
 strum = "0.24"
